--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p><span>Area: Project management, Health IT</span></p>
       <p><span>Keywords:&nbsp;control, team, collaboration, personality, network, identity, security, value </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
-	  <p>Qin Weng, Wendy Wang (Accepted). "Exploring IT Identity Claims: Toward A Value-Centric IT Identification Framework," <strong>European Journal of Information Systems</strong>. &nbsp;</p>
+		<p><u>Qin Weng</u>, Wendy Wang (Accepted). "Exploring IT Identity Claims: Toward A Value-Centric IT Identification Framework," <strong>European Journal of Information Systems</strong>. &nbsp;</p>
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Accepted). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>.&nbsp;&nbsp;</p>
 <p>Tom Mattson, Jie Ren, Qin Weng (2025). “The Bright and Dark Side of Social Media in  Marginalized Contexts,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6534. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/b7e0fac3-96d3-40a1-9e02-76d1a71d493f">read</a></p>
 <p>Tom Mattson, <u>Qin Weng</u>, Jie Ren (2025). “Unveiling Gender Dynamics for Mental Health Posts in Social Media and Generative Artificial Intelligence,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6562-6571. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/80b5e612-350a-49cc-8eab-2bbd845d10a0">read</a></p>
