--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Qin Weng</h1>
     <h3>Assistant Professor, Hankamer School of Business, Baylor University</h3>
     <hr>
-    <p>Dr. Qin Weng is an Assistant Professor of Information Systems and Business Analytics at the Hankamer School of Business, Baylor University. She received her PhD from the Katz Graduate School of Business, University of Pittsburgh. Her research focuses on IT  governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in <em>MIS Quarterly, Information Systems Research, Journal of the Association for Information Systems, Journal of Strategic Information Systems, European Journal of Information Systems, Information Systems Journal, Information &amp; Management, Internet Research, The DATA BASE for Advances in Information Systems</em>, and proceedings of major IS conferences. She is an AIS Distinguished Member. She has served as a mini-track chair at the Americas Conference on Information Systems and the Hawaii International Conference on System Sciences, and in editorial roles at the International Conference on Information Systems. Prior to her academic career, she had gained over 10 years of professional IT experience in the healthcare industry in the USA.</p>
+    <p>Dr. Qin Weng is an Assistant Professor of Information Systems and Business Analytics at the Hankamer School of Business, Baylor University. She received her PhD from the Katz Graduate School of Business, University of Pittsburgh. Her research focuses on IT governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in <em>MIS Quarterly, Information Systems Research, Journal of the Association for Information Systems, Journal of Strategic Information Systems, European Journal of Information Systems, Information Systems Journal, Information &amp; Management, Internet Research, The DATA BASE for Advances in Information Systems</em>, and proceedings of major IS conferences. She is an AIS Distinguished Member. She has served as a mini-track chair at the Americas Conference on Information Systems and the Hawaii International Conference on System Sciences, and in editorial roles at the International Conference on Information Systems. Prior to her academic career, she had gained over 10 years of professional IT experience in the healthcare industry in the USA.</p>
   </section>
 </header>
 <!-- content -->
@@ -47,32 +47,61 @@
     <hr class="sectionTitleRule2">
     <div class="section1Content">
 	  <h3 class="sectionContentTitle">Research Interest</h3>
-<p><span>Area: Project management, Health IT</span></p>
-      <p><span>Keywords:&nbsp;control, team, collaboration, personality, network, identity, security, value </span></p>
+<p><span>Area: IT Governance & Control, Health IT</span></p>
+      <p><span>Keywords:&nbsp;project, control, team, collaboration, personality, network, identity, security, value, well-being </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
+	<!-- HICSS 2026 -->
+      <p>Jie Ren, Tom Mattson, <u>Qin Weng</u> (Accepted). “Commenting from Afar: Psychological Distance and Empathy in Reddit
+	  Responses to School Shootings,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
+	<!-- ICIS 2025 -->	
+      <p>Min Ou, Hope Koch, <u>Qin Weng</u> (Accepted). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
+	<!-- ISJ 2025-->
 	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the messenger: The influence of sender characteristics on security message compliance intention," <strong>Information Systems Journal</strong>. </p>
+	<!-- MISQ 2025-->
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Forthcoming). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>. <a target="_blank" href="https://misq.umn.edu/extending-the-it-risk-control-framework-incorporating-the-role-of-team-personality.html">read</a></p>
+	<!-- AMCIS 2025 -->
 	  <p>Min Ou, <u>Qin Weng</u>, Hope Koch (2025). “A Field Study of Algorithmic Control in Knowledge Work,” Proceedings of the 31st Americas Conference in Information Systems, Montreal, Canada, August: 2101.&nbsp;&nbsp;<a target="_blank" href="https://aisel.aisnet.org/amcis2025/sig_cnow/sig_cnow/9/">read</a></p>
+	<!-- DATA BASE 2025 -->
 	  <p><u>Qin Weng</u>, Jie Ren, Tom Mattson, Xuefei (Nancy) Deng, K. D. Joshi (2025). "Rewriting the margins: Can artificial intelligence agents reshape the power dynamics in social media?" <strong>The DATA BASE for Advances in Information Systems</strong> 56(3), 7-12. <a target="_blank" href="https://doi.org/10.1145/3757308.3757310">read</a></p>
+	<!-- SIGMIS 2025 -->
 	  <p>Min Ou, Hope Koch, <u>Qin Weng</u> (2025). “Algorithmic Oversight of Knowledge Workers: A Research Agenda on Technology, Control, and Psychological Contracts,” Proceedings of the 2025 Computers and People Research Conference, Waco, TX, May: 1-7. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3716489.3728454">read</a></p>
+	<!-- EJIS 2025 -->
       <p><u>Qin Weng</u>, Wendy Wang (2025). "Exploring IT Identity Claims: Toward A Value-Centric IT Identification Framework," <strong>European Journal of Information Systems</strong>. <a target="_blank" href="https://www.tandfonline.com/doi/full/10.1080/0960085X.2025.2486827?src=exp-la">read</a></p>
+	<!-- HICSS 2025 -->
       <p>Tom Mattson, Jie Ren, <u>Qin Weng</u> (2025). “The Bright and Dark Side of Social Media in  Marginalized Contexts,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6534. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/b7e0fac3-96d3-40a1-9e02-76d1a71d493f">read</a></p>
+	<!-- HICSS 2025 -->
       <p>Tom Mattson, <u>Qin Weng</u>, Jie Ren (2025). “Unveiling Gender Dynamics for Mental Health Posts in Social Media and Generative Artificial Intelligence,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6562-6571. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/80b5e612-350a-49cc-8eab-2bbd845d10a0">read</a></p>
+	<!-- ICIS 2024 -->
       <p>Min Ou, <u>Qin Weng</u>, Hope Koch (2024). “How Intelligent Technologies Influence the Role of Knowledge Workers in the Tech Industry,” Proceedings of the 45th International Conference on Information Systems, Bangkok, Thailand, December: 2416.&nbsp;&nbsp;<a target="_blank" href="https://aisel.aisnet.org/icis2024/digtech_fow/digtech_fow/3/">read</a></p>
+	<!-- IM 2024 -->
       <p><u>Qin Weng</u>, Jaime B. Windeler, Likoebe M. Maruping, Viswanath Venkatesh (2024). "Bridge the Gap or Mind the Gap? The Role of Leader Coaching and Communication Technologies in Configurationally Dispersed Teams," <strong>Information &amp; Management </strong>61(6): 104000. <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S037872062400082X">read</a></p>
+	<!-- AMCIS 2024 -->
       <p>Min Ou, Hope Koch, <u>Qin Weng</u> (2024). “Exploring the Impact of Intelligent Technologies on Knowledge Work,” Proceedings of 30th Americas Conference on Information Systems, Salt Lake City, Utah, August: 1724. (Selected as a Top Paper &amp; Best Paper Nominee for AMCIS 2024)&nbsp; <a target="_blank" href="https://aisel.aisnet.org/amcis2024/fow/fow/11/">read</a></p>
+	<!-- IR 2024 -->
       <p><span> <u>Qin Weng</u>, Danping Wang, Stephen De Lurgio II, Sebastian Schuetz (2024). "How Do Small-to-Medium-Sized E-Commerce Businesses Stay Competitive? Evidence on the Critical Roles of IT Capability, Innovation and Multihoming," <strong>Internet Research </strong>35(1): 126-151.&nbsp;</span><a href="https://www.emerald.com/insight/content/doi/10.1108/INTR-01-2023-0061/full/html" target="_blank">read</a></p>
+	<!-- HICSS 2024 -->
 	  <p><span>Tom Mattson, Jie Ren, <u>Qin Weng</u> (2024). “The Bright and Dark Side of Social Media in the Marginalized Contexts,” Proceedings of 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January: 7204. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/65948a66-96fe-432f-91ad-b928ec81ba54">read</a></span></p>
+	<!-- HICSS 2024 -->
       <p><span>Tom Mattson, <u>Qin Weng</u>, Jie Ren (2024). “Curse or Cure: Exploring Responses to Mental Health Related Posts in Reddit and ChatGPT Using Terror Management Theory,” Proceedings of 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January: 7225-7234. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/e5e558ac-56b3-4324-a796-036508145195">read</a></span></p>
+	<!-- AMCIS 2023 -->
       <p><span><u>Qin Weng</u> (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment Using fsQCA,” Proceedings of 29th Americas Conference on Information Systems, Panama City, Panama, August: 1619. <a target="_blank" href="https://aisel.aisnet.org/amcis2023/sig_itpm/sig_itpm/4/">read</a>&nbsp;</span></p>
+	<!-- JSIS 2023 -->
       <p><span><u>Qin Weng</u>, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <strong>Journal of Strategic Information Systems</strong> 32(2): 101771.&nbsp;(Featured in Baylor Business Review, Fall 2024)&nbsp; </span><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0963868723000173">read</a> </p>
+	<!-- JAIS 2023 -->
       <p><span>Viswanath Venkatesh, <u>Qin Weng</u>, Arun Rai, Likoebe M. Maruping (2023). “Guidelines for the Development of Three-Level Models: Bridging Levels of Analysis and Integrating Contextual Influences in IS Research,” <strong>Journal of the Association for Information Systems</strong> 24(1): 65-106. </span><a target="_blank" href="https://aisel.aisnet.org/jais/vol24/iss1/7/">read</a>
+	<!-- AMCIS 2022 -->
       <p><span><u>Qin Weng</u>, Wendy Wang, Amber Young (2022). “How Is IT Identity Claimed and Manifested?” Proceedings of 28th Americas Conference on Information Systems, Minneapolis, MN, August: 1699. (Selected as a Top Paper for AMCIS 2022) <a target="_blank" href="https://aisel.aisnet.org/amcis2022/conf_theme/conf_theme/6/">read</a></span></p>
+    <!-- AMCIS 2019 -->
       <p><span><u>Qin Weng</u>, Wendy Wang, Jignya Patel (2019). “Exploring the Formation of IT Identity: A Technology-Value Fit Model,” Proceedings of 25th Americas Conference on Information Systems, Cancun, Mexico, August: 13. <a target="_blank" href="https://aisel.aisnet.org/amcis2019/adv_info_systems_research/adv_info_systems_research/13/">read</a></span></p>
+	<!-- Dissertation 2018 -->
       <p><span><u>Qin Weng</u> (2018). “Why Do Project Participants Work Together? An Investigation of the Antecedents of Collaboration Tie Strength in Cyberinfrastructure Projects,” Doctoral Dissertation, University of Pittsburgh. (Chaired by Dr. Laurie J. Kirsch)&nbsp;</span></p>
+	<!-- ISR 2016 -->
       <p><span>Gregory D. Moody, Laurie J. Kirsch, Sandra A. Slaughter, Brian Kimball Dunn, <u>Qin Weng</u> (2016). “Facilitating the Transformational: An Exploration of Control in Cyberinfrastructure Projects and the Discovery of Field Control,” <strong>Information Systems Research</strong> 27(2): 324-346. <a target="_blank" href="https://pubsonline.informs.org/doi/abs/10.1287/isre.2016.0619">read</a></span></p>
+	<!-- Encyclopidia 2015 -->
       <p><span>Laurie J. Kirsch, <u>Qin Weng</u> (2015). “IT Standards,” Wiley Encyclopedia of Management, 3rd Edition, Volume 7, Management Information Systems. <a target="_blank" href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/9781118785317.weom070034">read</a></span></p>
+	<!-- AMCIS 2011 -->
       <p><span><u>Qin Weng</u>, Nikhil Sharma, Brian S. Butler (2011). “Just-in-time Knowledge: Knowledge Mobilization in a Public Health Network,” Proceedings of 17th Americas Conference on Information Systems, Detroit, MI, August: 293. <a target="_blank" href="https://aisel.aisnet.org/amcis2011_submissions/293/">read</a></span></p>
+	<!-- HICSS 2001 -->
       <p><span>Kendall Giles, K-M. Bryson, <u>Qin Weng</u> (2001). “Comparison of Two Families of Entropy-Based Classification Measures with and without Feature Selection,” Proceedings of 34th Hawaii International Conference on Systems Sciences, Maui, HI, January. <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/926307">read</a></span></p>
     </div>
   </section>
